<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/italic"
        android:icon="@drawable/ic_format_italic_black_24dp"
        android:title="@string/simple_italic"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bold"
        android:icon="@drawable/ic_format_bold_black_24dp"
        android:title="@string/simple_bold"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/link"
        android:icon="@drawable/ic_insert_link_black_24dp"
        android:title="@string/simple_link"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/checkbox"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:title="@string/simple_checkbox"
        app:showAsAction="ifRoom" />
</menu>